# RM-simulation-exercise

./: CMakeLists.txt  README.md
include/: WindMillDetection.h  windmill.hpp
script/: BayesReg_CircleTracking.py  debug.py  main.py  main2.py
src/: WindMillDetection.cpp  main.cpp
